--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,28 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "rag-metadata-extractor"
 version = "0.0.1"
-description = "LLM-based metadata extraction for RAG pipelines."
+description = "LLM-powered metadata extraction + taxonomy builder for RAG"
 readme = "README.md"
 requires-python = ">=3.10"
-license = { file = "LICENSE" }
-authors = [{ name = "Leonid Kurik" }]
+dependencies = [
+  "pydantic>=2.0",
+  "langchain>=0.2.0",
+]
 
-dependencies = []
+[project.optional-dependencies]
+gemini = [
+  "langchain-google-genai>=1.0.0",
+]
+openai = [
+  "langchain-openai>=0.1.0",
+]
 
-[project.urls]
-Homepage = "https://github.com/<your-username>/rag-metadata-extractor"
+[tool.setuptools]
+package-dir = {"" = "src"}
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/rag_metadata_extractor"]
+[tool.setuptools.packages.find]
+where = ["src"]
